@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- Retrieves the email address for the SubscriptionContainer from the
+  portal_properties + better explaining text.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
